--- a/package.json
+++ b/package.json
@@ -13,19 +13,31 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "^4.15.0",
     "@trendyol-js/react-carousel": "^3.0.2",
-    "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "carousel-js": "^4.0.0",
+    "faker": "^6.6.6",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/node": "^20.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
+  },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts"
   }
 }
