--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "carousel-js": "^4.0.0",
     "faker": "^6.6.6",
     "next": "13.4.4",
@@ -34,6 +36,7 @@
     "@faker-js/faker": "^8.0.2",
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.15.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
