--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgres://postgres:BBNCCv9YP1B5VtTx@db.yfsauijifeichugphsyw.supabase.co:6543/postgres"
+JWT_SECRET = "hjdefviAJEFE]JCSDKMCajogfv]erw-9gujnkdxas@#$%^scfasc123rwfesd"
