--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "body-parser": "^1.20.2",
     "carousel-js": "^4.0.0",
     "faker": "^6.6.6",
+    "is-valid-australian-postcode": "^1.3.2",
+    "jose": "^4.14.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
