--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^4.15.0",
     "@trendyol-js/react-carousel": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -23,9 +24,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "carousel-js": "^4.0.0",
+    "cookies-next": "^2.1.2",
     "faker": "^6.6.6",
     "is-valid-australian-postcode": "^1.3.2",
     "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
